testing/tests/ui/before_1.54/no_template_attribute.stderr
error: no attribute 'template' found
 --> tests/ui/before_1.54/no_template_attribute.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
